Change background color to black and fix paragraph alignment
Changed the background color to black and fixed text alignment in paragraph.

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -24,7 +24,7 @@ body[a="dark"] { @include dark-appearance; }
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
 html, body { 
-  background: white;
+  background: black;
 }
 
 html { height: 100%; scroll-behavior: smooth; text-align: center;}
@@ -92,7 +92,7 @@ blockquote {
   border: thin solid black;
   padding: 1rem;
 
-  p { margin: 0; text-align=center;}
+  p { margin: 0;}
 }
 
 img {
